src/snapshots/crates_io__index__tests__index_metadata-2.snap
---
source: src/index.rs
expression: metadata
---
[
  {
    "name": "bar",
    "vers": "1.0.0-beta.1",
    "deps": [],
    "cksum": "0000000000000000000000000000000000000000000000000000000000000000",
    "features": {},
    "yanked": true,
    "pubtime": "2020-01-01T00:00:00Z"
  },
  {
    "name": "bar",
    "vers": "1.0.0",
    "deps": [],
    "cksum": "0000000000000000000000000000000000000000000000000000000000000000",
    "features": {},
    "yanked": false,
    "pubtime": "2020-01-01T00:00:00Z"
  },
  {
    "name": "bar",
    "vers": "2.0.0",
    "deps": [
      {
        "name": "foo",
        "req": ">= 0",
        "features": [],
        "optional": false,
        "default_features": false,
        "target": null,
        "kind": "normal"
      }
    ],
    "cksum": "0000000000000000000000000000000000000000000000000000000000000000",
    "features": {},
    "yanked": false,
    "pubtime": "2020-02-01T00:00:00Z"
  },
  {
    "name": "bar",
    "vers": "1.0.1",
    "deps": [],
    "cksum": "0123456789abcdef0123456789abcdef0123456789abcdef0123456789abcdef",
    "features": {},
    "yanked": false,
    "pubtime": "2020-03-01T00:00:00Z"
  }
]
