src/snapshots/crates_io__index__tests__index_metadata.snap
---
source: src/index.rs
expression: metadata
---
[
  {
    "name": "foo",
    "vers": "0.1.0",
    "deps": [],
    "cksum": "0000000000000000000000000000000000000000000000000000000000000000",
    "features": {},
    "yanked": false,
    "pubtime": "2020-01-01T00:00:00Z"
  }
]
