src/snapshots/crates_io__index__tests__index_metadata_with_pubtime.snap
---
source: src/index.rs
expression: metadata
---
[
  {
    "name": "bar",
    "vers": "1.0.0",
    "deps": [],
    "cksum": "0000000000000000000000000000000000000000000000000000000000000000",
    "features": {},
    "yanked": false,
    "pubtime": "2020-01-01T00:00:00Z"
  },
  {
    "name": "bar",
    "vers": "2.0.0",
    "deps": [],
    "cksum": "0000000000000000000000000000000000000000000000000000000000000000",
    "features": {},
    "yanked": false,
    "pubtime": "2020-02-01T00:00:00Z"
  }
]
